Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-10107

Broken run configuration when using in-source build

XMLWordPrintable

    • cc5c45f454085007f6119ccf6093df6b64dbae3d

      1. Open a project.
      2. In Projects mode, Build Settings, disable "Shadow build".
      3. Check Run Settings.
        "Executable" and "Working directory" are wrong.
      4. Build the project.
      5. Try to run the project.
        Creator fails, writing "Executable ... does not exist." to the Application Output view.

      Found by Squish test tst_simple_analyze.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hunger Tobias Hunger
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes