Qmake: Re-parse project after changing the build directory

That is necessary so that the executables get updated.

Task-number: QTCREATORBUG-10107
Change-Id: I42e3ce38a5824e285546c43a3ec0045b090c6af5
Reviewed-by: Daniel Teske <daniel.teske@digia.com>